modified:   .gitignore             removed from git the development_tmp
modified:   src/IC_CPS/IC_CAM/
            modified for forecasts

modified:   src/IC_CPS/
            modified for forecasts

modified:   src/recover/recover_interrupted.sh
            inserted an if for recover postprocC3S to be
            done ONLY in forecast mode

modified:   src/util/descr_CPS.sh
            added qos in cmcc machines for portability

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ### Ignore the following:
 logs
 executables_cesm
-work
+development_tmp
 checklists/sps4_hindcast_list.csv
 checklists/sps4_hindcast_list_zeus.csv
